@@ -106,6 +106,7 @@ following names for their contribution to the product.
 * René Kijewski
 * Robert Treat
 * RockMFR
+* Roi Avinoam
 * Sam Reed
 * ST47
 * Scott Colcord
